Initial commit - Java Spring Boot Kitap Satış Sistemi

--- a/pom.xml
+++ b/pom.xml
@@ -49,18 +49,18 @@
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
         </dependency>
         
-        <!-- H2 Database -->
+        <!-- SQLite Database -->
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.42.0.0</version>
         </dependency>
         
-        <!-- SQL Server JDBC Driver -->
+        <!-- SQLite Dialect for Hibernate -->
         <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <scope>runtime</scope>
+            <groupId>com.github.gwenn</groupId>
+            <artifactId>sqlite-dialect</artifactId>
+            <version>0.1.2</version>
         </dependency>
         
         <!-- JWT -->
