--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,18 @@
-# Kitap Satış Sistemi - Spring Boot Konfigürasyonu
+<# Kitap Satış Sistemi - Spring Boot Konfigürasyonu
 # .NET C# projesinden Java Spring'e dönüştürülmüştür
 
 # Server Configuration
 server.port=8081
 server.servlet.context-path=/
 
-# Database Configuration (H2 In-Memory Database for development)
-spring.datasource.url=jdbc:h2:mem:kitapsatissistemi
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-
-# H2 Console (for development)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Database Configuration (SQLite Database)
+spring.datasource.url=jdbc:sqlite:kitapsatissistemi.db
+spring.datasource.driverClassName=org.sqlite.JDBC
+spring.datasource.username=
+spring.datasource.password=
 
 # JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
